# WASH-PRO-CRM

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.ru.md  SECURITY.md  docker-compose.controllers.yml  docker-compose.override.yml.example  docker-compose.pyorchestrator.yml  docker-compose.redis.yml  docker-compose.yml
.github/: pull_request_template.md
dashboard/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
data/: README.md
docs/: 404.html  _config.yml  architecture.md  configuration.md  dashboard.md  database-schema.md  deployment.md  embedded-services.md  getting-started.md  index.html  index.md  mqtt.md  rabbitmq.md  robots.txt  security.md  setup-wizard.md  sitemap.xml  telegram.md  troubleshooting.md
dynamic-api/: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SCREENSHOTS.md  SECURITY.md  docker-compose.replica.yml  docker-compose.yml  package.json
local/: apply-server-patches.sh.example
modules/: README.md  README.ru.md  registry.json
patches/: dynamic-api-wash.patch
pyorchestrator/: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
pyorchestrator/mcp/: Dockerfile  README.md  cursor-mcp.example.json  pyproject.toml
pyorchestrator/mcp/pyorchestrator_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
releases/: README.md  (+67 more)
(+710 files in other folders)
