[project]
name = "pyorchestrator-mcp"
version = "0.1.0"
description = "MCP server for PyOrchestrator — AI agents manage scripts, runs, schedules"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "mcp[cli]>=1.18.0",
  "httpx>=0.27.0",
]

[project.scripts]
pyorchestrator-mcp = "pyorchestrator_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyorchestrator_mcp*"]
